# sparclclient

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pothier-alpha5.ipynb  pyproject.toml  requirements-client.txt  requirements-internal.txt  requirements.txt  setup.py  test.txt  tox.ini
.github/workflows/: django.yml
api/: __init__.py  api.py  client.py  conf.py  exceptions.py  sids.py  type_conversion.py  utils.py
api/benchmarks/: benchmarks.py
docs/html/: .buildinfo  api.benchmarks.html  api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/api/: client.html  conf.html  utils.html
docs/html/_modules/api/benchmarks/: benchmarks.html
docs/html/_sources/: api.benchmarks.rst.txt  api.rst.txt
docs/html/_static/: documentation_options.js
source/: api.rst  conf.py  index.rst  modules.rst  sparcl.rst
sparcl/: Results.py  __init__.py  client.py  conf.py  exceptions.py  fields.py  gather_2d.py  resample_spectra.py  sparc.ini  specids.py  type_conversion.py  unsupported.py  utils.py
sparcl/benchmarks/: benchmarks.py
sparcl/notebooks/: sparcl-examples.ipynb
sparcl/notebooks/UNPUBLISHED/: HowTo_SPARCL_Auth.ipynb  sparcl_auth_cases.ipynb
sparclclient/: __init__.py  fields.py  type_conversion.py
tests/: expected.py  expected_dev1.py  expected_pat.py  methods_tests.py  tests_api.py  utils.py
unpub-notebooks/: SPARCL_client_method_tests.ipynb  align_spectra.ipynb
